--- a/MultipleStoryboardsApp/Storyboards/Settings.storyboard
+++ b/MultipleStoryboardsApp/Storyboards/Settings.storyboard
@@ -1,7 +1,79 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="A6H-OJ-j9O">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Настройки-->
+        <scene sceneID="Tb1-Ec-6vw">
+            <objects>
+                <tableViewController id="B9K-Fu-U7j" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="BHP-VS-GxE">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="8TE-El-DNP">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8TE-El-DNP" id="sCd-C7-4Fm">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="B9K-Fu-U7j" id="dLi-16-svC"/>
+                            <outlet property="delegate" destination="B9K-Fu-U7j" id="20r-T1-RxO"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Настройки" id="KBE-EY-Iqd"/>
+                    <connections>
+                        <segue destination="A2v-Ce-5Ro" kind="push" id="FQR-Gk-ohw"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wz8-qj-ZeW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="826" y="925"/>
+        </scene>
+        <!--Предупреждение-->
+        <scene sceneID="yHA-sh-SBG">
+            <objects>
+                <viewController id="A2v-Ce-5Ro" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="IjW-7O-ehm"/>
+                        <viewControllerLayoutGuide type="bottom" id="UkX-ef-7Ob"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Lve-Dm-Sve">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Предупреждение" id="2BD-4V-EFG"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rq9-bQ-9Px" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1275" y="931"/>
+        </scene>
+        <!--Настройки-->
+        <scene sceneID="wp4-1F-y0s">
+            <objects>
+                <navigationController id="A6H-OJ-j9O" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Настройки" id="CHh-fp-V4v"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="FJD-om-iSU">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="B9K-Fu-U7j" kind="relationship" relationship="rootViewController" id="Agw-cX-d3Q"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Mr1-d4-nDj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="361" y="925"/>
+        </scene>
+    </scenes>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
