--- a/MultipleStoryboardsApp/Storyboards/BestCat.storyboard
+++ b/MultipleStoryboardsApp/Storyboards/BestCat.storyboard
@@ -1,7 +1,49 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Gj7-IS-ZDg">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Лучший кот-->
+        <scene sceneID="e7V-rD-cuh">
+            <objects>
+                <navigationController id="Gj7-IS-ZDg" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Лучший кот" id="9hh-uJ-5da"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="LmC-r7-zhj">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="QDM-LZ-Vb5" kind="relationship" relationship="rootViewController" id="n0O-7L-DlC"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DQg-0W-wuY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="68" y="191"/>
+        </scene>
+        <!--Лучший в мире кот-->
+        <scene sceneID="J6Q-Pp-TWY">
+            <objects>
+                <viewController id="QDM-LZ-Vb5" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="RxB-KT-xAV"/>
+                        <viewControllerLayoutGuide type="bottom" id="YM3-iU-r1c"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="qiZ-5p-ecj">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Лучший в мире кот" id="7vc-gH-A3g"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xfC-TJ-pcf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="576" y="191"/>
+        </scene>
+    </scenes>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
