--- a/MultipleStoryboardsApp/Storyboards/Breeds.storyboard
+++ b/MultipleStoryboardsApp/Storyboards/Breeds.storyboard
@@ -1,7 +1,79 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vrc-9p-T2p">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Породы котов-->
+        <scene sceneID="ysY-mB-hGz">
+            <objects>
+                <tableViewController id="XdZ-CX-t2D" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="yIf-jf-BDt">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="BOM-70-Qa9">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="BOM-70-Qa9" id="qNW-Gy-VGw">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="XdZ-CX-t2D" id="Zdx-TW-DFl"/>
+                            <outlet property="delegate" destination="XdZ-CX-t2D" id="xX3-mW-V8R"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Породы котов" id="HlM-m8-ywR"/>
+                    <connections>
+                        <segue destination="AlW-aw-Tlq" kind="push" id="Yer-KS-316"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cAJ-az-3Qh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="689" y="-436"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ao3-cP-bhF">
+            <objects>
+                <viewController id="AlW-aw-Tlq" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Oxo-pS-JHw"/>
+                        <viewControllerLayoutGuide type="bottom" id="5Nc-Cl-6Mq"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ubq-rX-xiZ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="NDZ-gp-b0K"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="40h-xA-uPe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1161" y="-436"/>
+        </scene>
+        <!--Породы-->
+        <scene sceneID="fy1-13-njJ">
+            <objects>
+                <navigationController id="vrc-9p-T2p" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Породы" id="TZT-w5-q3q"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="NoJ-CG-AYK">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="XdZ-CX-t2D" kind="relationship" relationship="rootViewController" id="x4Q-N9-ZyO"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iUK-xp-083" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="191.46666666666667" y="-435.46666666666664"/>
+        </scene>
+    </scenes>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
