--- a/MultipleStoryboardsApp/Storyboards/Breeds.storyboard
+++ b/MultipleStoryboardsApp/Storyboards/Breeds.storyboard
@@ -7,13 +7,13 @@
         <!--Породы котов-->
         <scene sceneID="ysY-mB-hGz">
             <objects>
-                <tableViewController id="XdZ-CX-t2D" sceneMemberID="viewController">
+                <tableViewController id="XdZ-CX-t2D" customClass="MSABreedsTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="yIf-jf-BDt">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="BOM-70-Qa9">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BreedCell" id="BOM-70-Qa9">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="BOM-70-Qa9" id="qNW-Gy-VGw">
                                     <autoresizingMask key="autoresizingMask"/>
@@ -26,6 +26,9 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Породы котов" id="HlM-m8-ywR"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="string" keyPath="typhoonKey" value="breedsTableViewController"/>
+                    </userDefinedRuntimeAttributes>
                     <connections>
                         <segue destination="AlW-aw-Tlq" kind="push" id="Yer-KS-316"/>
                     </connections>
