--- a/MultipleStoryboardsApp/Storyboards/Breeds.storyboard
+++ b/MultipleStoryboardsApp/Storyboards/Breeds.storyboard
@@ -37,10 +37,10 @@
             </objects>
             <point key="canvasLocation" x="689" y="-436"/>
         </scene>
-        <!--View Controller-->
+        <!--Breeds Detail View Controller-->
         <scene sceneID="ao3-cP-bhF">
             <objects>
-                <viewController id="AlW-aw-Tlq" sceneMemberID="viewController">
+                <viewController id="AlW-aw-Tlq" customClass="MSABreedsDetailViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Oxo-pS-JHw"/>
                         <viewControllerLayoutGuide type="bottom" id="5Nc-Cl-6Mq"/>
@@ -48,9 +48,21 @@
                     <view key="view" contentMode="scaleToFill" id="ubq-rX-xiZ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LhO-eR-Yl5">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="NDZ-gp-b0K"/>
+                    <connections>
+                        <outlet property="breedDetailTextView" destination="LhO-eR-Yl5" id="3ug-I7-2O0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="40h-xA-uPe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
